# simple-cpp-app

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: application.hpp
src/: CMakeLists.txt  application.cpp  hello.cpp  main.cpp
